[metadata]
name = ParlPy
version = 0.0.1
author = Robert Chambers
author_email = 1robertchambers@gmail.com
description = Scraper and utilities for UK Parliamentary bills
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Litharge/ParlPy
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
