[metadata]
name = ParlPy
version = 2.3.0
author = Robert Chambers
author_email = 1robertchambers@gmail.com
description = Scraper and utilities for UK Parliamentary bills
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Litharge/ParlPy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
install_requires = 
    pandas
    bs4
