[metadata]
name = ParlPy
version = 2.5.2
author = Robert Chambers
author_email = 1robertchambers@gmail.com
description = API Wrapper and Scraper for UK Parliamentary Bills
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Litharge/ParlPy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
install_requires = 
    pandas
    bs4
    gcsfs
